testsuite/tests/rename/should_compile/NullaryRecordWildcard.hs
{-# LANGUAGE RecordWildCards #-}

module NullaryRecordWildcard where

data X = X

f X {..} = ()
