testsuite/tests/rename/should_fail/T13644C.hs
module T13644C where

data T = T { name :: () }
